<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eigen_conversions</name>
  <version>1.12.0</version>
  <description>

     Conversion functions between:
      - Eigen and KDL
      - Eigen and geometry_msgs.

  </description>
  <author>Stuart Glaser</author>
  <author>Adam Leeper</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/eigen_conversions</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
